--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.JavaActivity"/>
+        <activity android:name=".view.JavaActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
